feat: successfully deployed, s3 and cloudfront created

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "paths": {
       "~/*": ["./*"]
     },
-    "target": "ESNext",
+    "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
@@ -20,6 +20,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src", "cdk.ts"]
 }
