--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-store-app",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
@@ -10,7 +11,9 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "lint": "eslint --ignore-path .gitignore --fix src",
-    "prettier": "prettier src --write"
+    "prettier": "prettier src --write",
+    "cdk:bootstrap": "cdk bootstrap --profile default --require-approval=never",
+    "cdk:setup": "cdk deploy --profile default --require-approval=never"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -19,6 +22,7 @@
     "@mui/material": "^5.8.7",
     "@mui/styles": "^5.8.7",
     "@types/yup": "^0.29.14",
+    "aws-cdk-lib": "^2.106.1",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
