--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "test:coverage": "vitest run --coverage",
     "lint": "eslint --ignore-path .gitignore --fix src",
     "prettier": "prettier src --write",
-    "cdk:bootstrap": "cdk bootstrap --profile default --require-approval=never",
-    "cdk:setup": "cdk deploy --profile default --require-approval=never"
+    "cdk:bs": "npx cdk bootstrap",
+    "cdk:deploy": "npx cdk deploy",
+    "cdk:destroy": "npx cdk destroy"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
